Fixed lightbox resizing too small, now 100% width or 90% max width

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -575,8 +575,8 @@ body {
 #expanded-img {
   margin: auto;
   display: block;
-  width: 80%;
-  max-width: 700px;
+  width: 100%;
+  max-width: 90%;
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
